--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="{% static 'style.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1> Login Page: </h1>
