--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="hello.html">
+    <form action="home.html">
         <table>
             <tr><td>Username: </td><td><input type="text" name="name"></td></tr>
             <tr><td>password: </td><td><input type="password" name="password"></td></tr>
