--- a/templates/login.html
+++ b/templates/login.html
@@ -6,10 +6,11 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="home.html">
+    <form action="/" method="post">
+        {% csrf_token %}
         <table>
-            <tr><td>Username: </td><td><input type="text" name="name"></td></tr>
-            <tr><td>password: </td><td><input type="password" name="password"></td></tr>
+            <tr><td>Username: </td><td><input type="text" name="username"></td></tr>
+            <tr><td>Password: </td><td><input type="password" name="password"></td></tr>
         </table>
         <input type="submit">
     </form>
