Fixing routing between pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Home | Scheduler</title>
+    <link rel="stylesheet" href="/static/style.css"/>
 </head>
-<body>
+<body style="background-color: rgb(217,217,217)">
 <h1>Home Page After Login</h1>
+<br/><a href="home.html">TA Scheduler</a>
+    <div class="navbar">
+        <a href="configureUser.html">Configure Users</a>
+        <a href="">Configure Courses</a>
+        <a href="">Databases</a>
+        <a href="admin_Home.html">Admin Home</a>
+    </div>
+
 </body>
 </html>
