--- a/templates/admin_Home.html
+++ b/templates/admin_Home.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Home | Admin | Scheduler</title>
+    <link rel="stylesheet" href="/static/style.css"/>
 </head>
-<body>
+<body style="background-color: rgb(217,217,217)">
 <h1>Home Page For Admins</h1>
 <h1>Accessible via Home Page Through a Button and User has Admin Permission</h1>
+<br/><a href="home.html">TA Scheduler</a>
+    <div class="navbar">
+        <a href="configureUser.html">Configure Users</a>
+        <a href="">Configure Courses</a>
+        <a href="">Databases</a>
+        <a class="active" href="admin_Home.html">Admin Home</a>
+    </div>
+
+
 </body>
 </html>
