Completed template for configure users page, created the edit Modal for user, need to create a proper form now.

--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -15,10 +15,27 @@
     <button class="addUser" type="button">Add User</button>
     <div class="userBox">
         <h2>Jayson Rock</h2>
-        <p>I Love Jayson Rock <333</p>
+        <p>Instructor <br /> Comp Sci 361, Comp Sci 337 <br />
+            rock@uwm.edu <br /> 414-414-4141</p>
+        <div class="edit-modal" popover id="editModal">
+            <h2>Edit user info:</h2>
+            <button popovertarget="editModal" popovertargetaction="hide">
+                Close
+            </button>
+        </div>
+        <button popovertarget="editModal">Edit</button>
     </div>
     <div class="userBox">
         <h2>Ayesha Siddika Nipu</h2>
+        <p>Instructor <br /> Comp Sci 361, Comp Sci 999<br />
+            ninpau@uwm.edu <br />414-414-4141</p>
+        <div class="edit-modal" popover id="editModal">
+            <h2>Edit user info:</h2>
+            <button popovertarget="editModal" popovertargetaction="hide">
+                Close
+            </button>
+        </div>
+        <button popovertarget="editModal">Edit</button>
     </div>
 </body>
 </html>
