--- a/static/style.css
+++ b/static/style.css
@@ -34,4 +34,10 @@
     height: 260px;
     background-color: white;
     margin-left: 20px;
+    text-align: center;
+}
+
+.edit-modal{
+    width: 500px;
+    height: 500px;
 }
