Re-fixed routing between pages so that all current templates are connected

--- a/templates/admin_Home.html
+++ b/templates/admin_Home.html
@@ -12,8 +12,8 @@
     <div class="navbar">
         <a href="configureUser.html">Configure Users</a>
         <a href="">Configure Courses</a>
-        <a href="">Databases</a>
-        <a class="active" href="admin_Home.html">Admin Home</a>
+{#        <a href="">Databases</a>#}
+{#        <a class="active" href="admin_Home.html">Admin Home</a>#}
     </div>
 
 
