--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-    <br/><a href="/templates/home.html">TA Scheduler</a>
+{#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
+    <br/><a href="home.html">TA Scheduler</a>
     <div class="navbar">
         <a class="active" href="configureUser.html">Configure Users</a>
         <a href="">Configure Courses</a>
