--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,9 @@
 <h1>Home Page After Login</h1>
 <br/><a href="home.html">TA Scheduler</a>
     <div class="navbar">
-        <a href="configureUser.html">Configure Users</a>
-        <a href="">Configure Courses</a>
-        <a href="">Databases</a>
+{#        <a href="configureUser.html">Configure Users</a>#}
+{#        <a href="">Configure Courses</a>#}
+{#        <a href="">Databases</a>#}
         <a href="admin_Home.html">Admin Home</a>
     </div>
 
