Created test files for each separate User Methods file

--- a/templates/user_Directory.html
+++ b/templates/user_Directory.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Scheduler</title>
+    <title>Home | User Directory | Scheduler</title>
     <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
-<h1>Home Page After Login</h1>
+<h1>User Directory</h1>
+<h1>Accessible via Home Page Through a Button</h1>
 <br/><a href="home.html">TA Scheduler</a>
     <div class="navbar">
 {#        <a href="configureUser.html">Configure Users</a>#}
 {#        <a href="">Configure Courses</a>#}
 {#        <a href="">Databases</a>#}
         <a href="admin_Home.html">Admin Home</a>
-        <a href="user_Directory.html">User Directory</a>
+        <a class = "active" href="user_Directory.html">User Directory</a>
         <a href="course_Directory.html">Course Directory</a>
     </div>
 
