Added a link on the login page since we can't login without any users in the database.

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,5 +15,6 @@
         <input type="submit">
     </form>
     {{ message }}
+    <a href="home.html">Go To Home (for testing so we don't have to log in everytime)</a>
 </body>
 </html>
