Made the login page look nicer

--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
         </form>
         </div>
         <br>
-        <a href="home.html">Go To Home Page (for testing so we don't have to log in everytime)</a>
+        <a href="home.html">Go To Homepage (for testing so we don't have to log in everytime)</a>
     </div>
 </body>
 </html>
