--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -7,103 +7,140 @@
 </head>
 <body style="background-color: rgb(217,217,217)">
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
-    <br/><a href="home.html">TA Scheduler</a>
-    <div class="navbar">
-        <a class="active" href="configureUser.html">Configure Users</a>
-        <a href="">Configure Courses</a>
-        <a href="">Databases</a>
-    </div>
+<br/><a href="home.html">TA Scheduler</a>
+<div class="navbar">
+    <a class="active" href="configureUser.html">Configure Users</a>
+    <a href="">Configure Courses</a>
+    <a href="">Databases</a>
+</div>
 
-    <div class="addUserModal">
-        <div class="create-user" popover id="createUser">
-            <div class="createNewUserModalHeader">
-                <h2>Create new Course</h2>
+<div class="addUserModal">
+    <div class="create-user" popover id="createUser">
+        <div class="createNewUserModalHeader">
+            <h2>Add new User</h2>
+        </div>
+        <div class="modal-header" id="myModal">
+            <div class="modal-dialog">
+                <form action=" " method="post">
+                    {% csrf_token %}
+                    <div>
+                        <label class="form-label required">First Name</label>
+                        <input type="text" class="form-control" name="first_name">
+                    </div>
+                    <div>
+                        <label class="form-label required">Last Name</label>
+                        <input type="text" class="form-control" name="last_name">
+                    </div>
+                    <!--
+                        <div>
+                            Role:
+                                <select name="role">
+
+                                </select>
+                        </div>
+
+                        <div>
+                            <label class="form-label required">Courses</label>
+                            <input type="text" class="form-control" name="">
+                        </div>
+                        -->
+                    <div>
+                        <label class="form-label required">Username</label>
+                        <input type="text" class="form-control" name="username">
+                    </div>
+                    <div>
+                        <label class="form-label required">Password</label>
+                        <input type="text" class="form-control" name="password">
+                    </div>
+                    <div>
+                        <label class="form-label required">Email</label>
+                        <input type="email" class="form-control" name="email">
+                    </div>
+                    <div>
+                        <label class="form-label required">Phone Number</label>
+                        <input type="number" class="form-control" name="phone_number">
+                    </div>
+                    <div>
+                        <label class="form-label required">Address</label>
+                        <input type="text" class="form-control" name="address">
+                    </div>
+                    <div>
+                        Role:
+                        <select name="role">
+                            {% for i in roles %}
+                                <option value="{{ i.1 }}">{{ i.0 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    <!--
+                        <div>
+                            <label class="form-label required">Courses</label>
+                            <input type="text" class="form-control" name="">
+                        </div>
+
+                    -->
+                <input type="submit">
+                </form>
             </div>
-            <div class="modal-header" id="myModal">
-                <div class="modal-dialog">
-                            <form>
-                                <div>
-                                    <label class="form-label required">Name</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                                <div class="form-group">
-                                    <label for="roleControlSelect1">Role</label>
-                                        <select class="form-control" id="roleControlSelect1">
-                                            <option> </option>
-                                            <option>TA</option>
-                                            <option>Instructor</option>
-                                            <option>Admin</option>
-                                        </select>
-                                </div>
-                                <div>
-                                    <label class="form-label required">Courses</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                                <div>
-                                    <label class="form-label required">Email</label>
-                                    <input type="email" class="form-control">
-                                </div>
-                                <div>
-                                    <label class="form-label required">Phone Number</label>
-                                    <input type="number" class="form-control">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                            <button popovertarget="createUser" popovertargetaction="hide">
-                                Cancel
-                            </button>
-                        </div>
-                </div>
+            <div class="modal-footer">
+                <button popovertarget="createUser" popovertargetaction="hide">
+                    Cancel
+                </button>
             </div>
         </div>
-    <button popovertarget="createUser">Add User</button>
-    <div class="userBox">
-        <h2>Jayson Rock</h2>
-        <p>Instructor <br /> Comp Sci 361, Comp Sci 337 <br />
-            rock@uwm.edu <br /> 414-414-4141</p>
-        <div class="edit-modal" popover id="editModal">
-            <h2>Edit user info:</h2>
-            <div class="modal-header" id="myModal">
-                <div class="modal-dialog">
-                            <form>
-                                <div>
-                                    <label class="form-label required">Name</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                                 <div class="form-group">
-                                    <label for="roleControlSelect1">Role</label>
-                                        <select class="form-control" id="roleControlSelect1">
-                                            <option> </option>
-                                            <option>TA</option>
-                                            <option>Instructor</option>
-                                            <option>Admin</option>
-                                        </select>
-                                </div>
-                                <div>
-                                    <label class="form-label required">Courses</label>
-                                    <input type="text" class="form-control">
-                                </div>
-                                <div>
-                                    <label class="form-label required">Email</label>
-                                    <input type="email" class="form-control">
-                                </div>
-                                <div>
-                                    <label class="form-label required">Phone Number</label>
-                                    <input type="number" class="form-control">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                            <button popovertarget="editModal" popovertargetaction="hide">
-                                Cancel
-                            </button>
-                        </div>
-            </div>
-        </div>
-        <button popovertarget="editModal">Edit</button>
     </div>
+</div>
+<button popovertarget="createUser">Add User</button>
+<div class="userBox">
+    <h2>Jayson Rock</h2>
+    <p>Instructor <br/> Comp Sci 361, Comp Sci 337 <br/>
+        rock@uwm.edu <br/> 414-414-4141</p>
+    <div class="edit-modal" popover id="editModal">
+        <h2>Edit user info:</h2>
+        <div class="modal-header" id="myModal">
+            <div class="modal-dialog">
+                <form>
+                    <div>
+                        <label class="form-label required">First Name</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div>
+                        <label class="form-label required">Last Name</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="roleControlSelect1">Role</label>
+                        <select class="form-control" id="roleControlSelect1">
+                            <option></option>
+                            <option>TA</option>
+                            <option>Instructor</option>
+                            <option>Admin</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="form-label required">Courses</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div>
+                        <label class="form-label required">Email</label>
+                        <input type="email" class="form-control">
+                    </div>
+                    <div>
+                        <label class="form-label required">Phone Number</label>
+                        <input type="number" class="form-control">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button popovertarget="editModal" popovertargetaction="hide">
+                    Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+    <button popovertarget="editModal">Edit</button>
+</div>
 </body>
 </html>
