Made the pop-up for creating courses

--- a/templates/admin_Home.html
+++ b/templates/admin_Home.html
@@ -11,7 +11,7 @@
 <br/><a href="home.html">TA Scheduler</a>
     <div class="navbar">
         <a href="configureUser.html">Configure Users</a>
-        <a href="">Configure Courses</a>
+        <a href="configureCourse.html">Configure Courses</a>
 {#        <a href="">Databases</a>#}
 {#        <a class="active" href="admin_Home.html">Admin Home</a>#}
     </div>
