--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -10,7 +10,7 @@
 <br/><a href="home.html">TA Scheduler</a>
 <div class="navbar">
     <a class="active" href="configureUser.html">Configure Users</a>
-    <a href="">Configure Courses</a>
+    <a href="configureCourse.html">Configure Courses</a>
     <a href="">Databases</a>
 </div>
 
