finished implementing creating courses

--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -47,5 +47,6 @@
     </div>
 </div>
 <button popovertarget="createCourse">Add Course</button>
+<p style="text-align: center">{{ message }}</p>
 </body>
 </html>
