--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -23,6 +23,7 @@
             <div class="modal-dialog">
                 <form action=" " method="post">
                     {% csrf_token %}
+                    <input type="hidden" name="form_name" value="create_course">
                     <div>
                         <label class="form-label required">Course Name</label>
                         <input type="text" class="form-control" name="course_name">
