Added simple functionality to display the courses added onto course_Directory, with some basic css and adjusted the views so everything displays

--- a/static/style.css
+++ b/static/style.css
@@ -50,3 +50,25 @@
     content: "*";
     color: red;
 }
+
+/*
+    Display Courses style:
+ */
+.container {
+    text-align: center;
+}
+
+.centered-list {
+    display: inline-block;
+    text-align: center;
+}
+
+.ol {
+    border: 5px solid cornflowerblue;
+}
+
+.p {
+    font-size: 20px;
+    margin: 10px 0;
+    border: 2px solid #54d38e
+}
