Added the same showing of course in configure courses

--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -49,5 +49,22 @@
 </div>
 <button popovertarget="createCourse">Add Course</button>
 <p style="text-align: center">{{ message }}</p>
+    <div class="container">
+        <h2 class="container">Courses:</h2>
+        <ol class="centered-list ">
+            {% for course in courses %}
+                <p class="p" >
+                    {{ course.name }} <br>
+                    <ul>
+                        {% for instructor in course.instructors.all %}
+                            <li>{{ instructor }}</li>
+                        {% empty %}
+                            <li>No instructors assigned.</li>
+                        {% endfor %}
+                    </ul>
+                </p>
+            {% endfor %}
+        </ol>
+    </div>
 </body>
 </html>
