--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@
 }
 
 .navbar a{
-    padding: 175px;
+    padding: 10%;
     color: white;
     text-align: center;
     font-size: 20px;
@@ -29,6 +29,7 @@
     height: 260px;
     background-color: white;
     margin-left: 20px;
+    margin-top:10px;
     text-align: center;
 }
 
@@ -82,6 +83,10 @@ ul ul{/*Inner bullet*/
     list-style-type: circle;
 }
 
+
+/*
+    User directory formatting
+*/
 .courselist{
     position: relative;
     left: -15px;
