--- a/templates/course_Directory.html
+++ b/templates/course_Directory.html
@@ -2,39 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | User Directory | Scheduler</title>
-    <link href="/static/style.css" rel="stylesheet"/>
+    <title>Course Directory | Scheduler</title>
+    <link rel="stylesheet" href="/static/style.css"/>
 </head>
 <body style="background-color: rgb(217,217,217)">
 <h1>Course Directory</h1>
-<h1></h1>
-<br/><a href="home.html">TA Scheduler</a>
-    <div class="navbar">
-{#        <a href="configureUser.html">Configure Users</a>#}
-{#        <a href="">Configure Courses</a>#}
-{#        <a href="">Databases</a>#}
-        <a href="admin_Home.html">Admin Home</a>
-        <a href="user_Directory.html">User Directory</a>
-        <a class = "active" href="course_Directory.html">Course Directory</a>
-        
-    </div>
-    <div class="container">
-        <h2 class="container">Courses:</h2>
-        <ol class="centered-list ">
-            {% for course in courses %}
-                <p class="p" >
-                    {{ course.name }} <br>
-                    <ul>
-                        {% for instructor in course.instructors.all %}
-                            <li>{{ instructor }}</li>
-                        {% empty %}
-                            <li>No instructors assigned.</li>
-                        {% endfor %}
-                    </ul>
-                </p>
-            {% endfor %}
-        </ol>
-    </div>
+<a href="home.html">TA Scheduler</a>
 
+<div class="navbar">
+    <a href="admin_Home.html">Admin Home</a>
+    <a href="user_Directory.html">User Directory</a>
+    <a class="active" href="course_Directory.html">Course Directory</a>
+</div>
+
+<div class="container">
+    <h2 class="container">Courses:</h2>
+
+    <!-- Filter Toggle -->
+    <form method="get" action="course_Directory.html" style="margin-bottom: 20px;">
+        <label>
+            <input type="checkbox" name="filter" value="assigned" {% if filter_assigned %}checked{% endif %}>
+            Show Only Assigned Courses/Labs
+        </label>
+        <button type="submit">Apply Filter</button>
+    </form>
+
+    <!-- Display Courses -->
+    <ol class="centered-list">
+        {% for course in courses %}
+            <p class="p">
+                {{ course.name }} <br>
+                <ul>
+                    <!-- Display Labs for TAs, later change this so all users see lab sections -->
+                    {% if user.role == 'TA' %}
+                        {% for lab in course.labs.all %}
+                            {% if lab.ta == user %}
+                                <li>Lab: {{ lab.name }}</li>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+
+                    <!-- Display Instructors -->
+                    {% for instructor in course.instructors.all %}
+                        <li>{{ instructor.first_name }} {{ instructor.last_name }} ({{ instructor.get_role_display }})</li>
+                    {% empty %}
+                        <li>No instructors assigned.</li>
+                    {% endfor %}
+                </ul>
+            </p>
+        {% endfor %}
+    </ol>
+</div>
 </body>
 </html>
