Added the permissions so that only the admin can access the admin home page now, also made a helper method for getting the current user.

--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -68,8 +68,9 @@
                     <div>
                         Role:
                         <select name="role">
+                            <option></option>
                             {% for i in roles %}
-                                <option value="{{ i.1 }}">{{ i.0 }}</option>
+                                <option value="{{ i.0 }}">{{ i.1 }}</option>
                             {% endfor %}
                         </select>
                     </div>
