--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,6 @@
         <a href="user_Directory.html">User Directory</a>
         <a href="course_Directory.html">Course Directory</a>
     </div>
-
+    <p style="text-align: center">{{ message }}</p>
 </body>
 </html>
