--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -112,10 +112,12 @@
         <div class="edit-modal" popover id="editModal {{ user.id }}">
             <h2>Edit user info:</h2>
             <div class="modal-header" id="myModal {{ user.id }}">
-                <div class="modal-dialog">
-                    <form method="POST" action="editUserHelper">
+                <form method="POST" action="{% url 'configure_user' %}">
+                    <div class="modal-dialog">
+
+                        {% csrf_token %}
                         <input type="hidden" name="form_name" value="edit_user">
-                        <input type="hidden" name="user_id" value="{{ user.id }}">
+                        <input type="hidden" name="username" value="{{ user.username }}">
                         <div>
                             <label class="form-label required">First Name</label>
                             <input type="text" name="first_name" class="form-control" value="{{ user.first_name }}">
@@ -127,7 +129,6 @@
                         <div class="form-group">
                             <label for="roleControlSelect1">Role</label>
                             <select name="role" class="form-control" id="roleControlSelect1">
-                                <option value="" {% if not user.role %}selected{% endif %}></option>
                                 <option value="TA" {% if user.role == "TA" %}selected{% endif %}>TA</option>
                                 <option value="Instructor" {% if user.role == "Instructor" %}selected{% endif %}>
                                     Instructor
@@ -135,15 +136,6 @@
                                 <option value="Admin" {% if user.role == "Admin" %}selected{% endif %}>Admin</option>
                             </select>
                         </div>
-                        <!--
-                            <div>
-                                <label class="form-label required">Courses</label>
-
-                                find out how to show courses properly
-
-                                <input type="text" name="courses" class="form-control" value="">
-                            </div>
-                            -->
                         <div>
                             <label class="form-label required">Email</label>
                             <input type="email" name="email" class="form-control" value="{{ user.email }}">
@@ -152,14 +144,15 @@
                             <label class="form-label required">Phone Number</label>
                             <input type="text" name="phone_number" class="form-control" value="{{ user.phone_number }}">
                         </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Save</button>
-                    <button popovertarget="editModal {{ user.id }}" popovertargetaction="hide">
-                        Cancel
-                    </button>
-                </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" class="btn btn-secondary" popovertarget="editModal {{ user.id }}"
+                                popovertargetaction="hide">
+                            Cancel
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
         <button popovertarget="editModal {{ user.id }}">Edit</button>
