--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -27,6 +27,7 @@
                     <div>
                         <label class="form-label required">Course Name</label>
                         <input type="text" class="form-control" name="course_name">
+                    </div>
                     <div>
                         Instructor:
                         <select name="instructor">
