Implemented log out function and fixed the navbar to look better on each page

--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -9,10 +9,12 @@
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
 <br/><a href="home.html">TA Scheduler</a>
 <div class="navbar">
-    <a href="configureUser.html">Configure Users</a>
-    <a class="active" href="configureCourse.html">Configure Courses</a>
-    <a href="">Databases</a>
-</div>
+        <a href="configureUser.html" style="padding: 182px">Configure Users</a>
+        <a class="active" href="configureCourse.html" style="padding: 182px">Configure Courses</a>
+        <a href="/" style="padding: 182px">Log Out</a>
+{#        <a href="">Databases</a>#}
+{#        <a class="active" href="admin_Home.html">Admin Home</a>#}
+    </div>
 
 <div class="addCourseModal">
     <div class="create-course" popover id="createCourse">
