--- a/templates/course_Directory.html
+++ b/templates/course_Directory.html
@@ -10,10 +10,11 @@
 <a href="home.html">TA Scheduler</a>
 
 <div class="navbar">
-    <a href="admin_Home.html">Admin Home</a>
-    <a href="user_Directory.html">User Directory</a>
-    <a class="active" href="course_Directory.html">Course Directory</a>
-</div>
+        <a href="admin_Home.html" style="padding: 125px">Admin Home</a>
+        <a href="user_Directory.html" style="padding: 125px">User Directory</a>
+        <a class="active" href="course_Directory.html" style="padding: 125px">Course Directory</a>
+        <a href="/" style="padding: 125px">Log Out</a>
+    </div>
 
 <div class="container">
     <h2 class="container">Courses:</h2>
