--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,10 @@
 {#        <a href="configureUser.html">Configure Users</a>#}
 {#        <a href="">Configure Courses</a>#}
 {#        <a href="">Databases</a>#}
-        <a href="admin_Home.html">Admin Home</a>
-        <a href="user_Directory.html">User Directory</a>
-        <a href="course_Directory.html">Course Directory</a>
+        <a href="admin_Home.html" style="padding: 125px">Admin Home</a>
+        <a href="user_Directory.html" style="padding: 125px">User Directory</a>
+        <a href="course_Directory.html" style="padding: 125px">Course Directory</a>
+        <a href="/" style="padding: 125px">Log Out</a>
     </div>
     <p style="text-align: center">{{ message }}</p>
 </body>
