--- a/templates/admin_Home.html
+++ b/templates/admin_Home.html
@@ -10,8 +10,9 @@
 <h1>Accessible via Home Page Through a Button and User has Admin Permission</h1>
 <br/><a href="home.html">TA Scheduler</a>
     <div class="navbar">
-        <a href="configureUser.html">Configure Users</a>
-        <a href="configureCourse.html">Configure Courses</a>
+        <a href="configureUser.html" style="padding: 180px">Configure Users</a>
+        <a href="configureCourse.html" style="padding: 180px">Configure Courses</a>
+        <a href="/" style="padding: 180px">Log Out</a>
 {#        <a href="">Databases</a>#}
 {#        <a class="active" href="admin_Home.html">Admin Home</a>#}
     </div>
