--- a/templates/configureUser.html
+++ b/templates/configureUser.html
@@ -9,10 +9,12 @@
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
 <br/><a href="home.html">TA Scheduler</a>
 <div class="navbar">
-    <a class="active" href="configureUser.html">Configure Users</a>
-    <a href="configureCourse.html">Configure Courses</a>
-    <a href="">Databases</a>
-</div>
+        <a class="active" href="configureUser.html" style="padding: 182px">Configure Users</a>
+        <a href="configureCourse.html" style="padding: 182px">Configure Courses</a>
+        <a href="/" style="padding: 182px">Log Out</a>
+{#        <a href="">Databases</a>#}
+{#        <a class="active" href="admin_Home.html">Admin Home</a>#}
+    </div>
 
 <div class="addUserModal">
     <div class="create-user" popover id="createUser">
