--- a/templates/user_Directory.html
+++ b/templates/user_Directory.html
@@ -13,9 +13,10 @@
 {#        <a href="configureUser.html">Configure Users</a>#}
 {#        <a href="">Configure Courses</a>#}
 {#        <a href="">Databases</a>#}
-        <a href="admin_Home.html">Admin Home</a>
-        <a class = "active" href="user_Directory.html">User Directory</a>
-        <a href="course_Directory.html">Course Directory</a>
+        <a href="admin_Home.html" style="padding: 125px">Admin Home</a>
+        <a class="active" href="user_Directory.html" style="padding: 125px">User Directory</a>
+        <a href="course_Directory.html" style="padding: 125px">Course Directory</a>
+        <a href="/" style="padding: 125px">Log Out</a>
     </div>
     <div class="container">
         <h2 class="container">Users:</h2>
