--- a/templates/configureCourse.html
+++ b/templates/configureCourse.html
@@ -9,12 +9,12 @@
 {#    <br/><a href="/templates/home.html">TA Scheduler</a>#}
 <br/><a href="home.html">TA Scheduler</a>
 <div class="navbar">
-        <a href="configureUser.html" style="padding: 182px">Configure Users</a>
-        <a class="active" href="configureCourse.html" style="padding: 182px">Configure Courses</a>
-        <a href="/" style="padding: 182px">Log Out</a>
-{#        <a href="">Databases</a>#}
-{#        <a class="active" href="admin_Home.html">Admin Home</a>#}
-    </div>
+    <a href="configureUser.html" style="padding: 150px">Configure Users</a>
+    <a class="active" href="configureCourse.html" style="padding: 150px">Configure Courses</a>
+    <a href="/" style="padding: 150px">Log Out</a>
+    {#        <a href="">Databases</a>#}
+    {#        <a class="active" href="admin_Home.html">Admin Home</a>#}
+</div>
 
 <div class="addCourseModal">
     <div class="create-course" popover id="createCourse">
@@ -98,22 +98,58 @@
 </div>
 <button popovertarget="createLab">Add Lab</button>
 <p style="text-align: center">{{ message }}</p>
-    <div class="container">
-        <h2 class="container">Courses:</h2>
-        <ol class="centered-list ">
-            {% for course in courses %}
-                <p class="p" >
-                    {{ course.name }} <br>
-                    <ul>
-                        {% for instructor in course.instructors.all %}
-                            <li>{{ instructor }}</li>
-                        {% empty %}
-                            <li>No instructors assigned.</li>
-                        {% endfor %}
-                    </ul>
-                </p>
+
+<div class="courseContainer">
+    {% for course in courses %}
+        <div class="courseBox">
+            <h2>{{ course.name }}</h2>
+            <p>{% for instructor in course.instructors.all %}
+                {{ instructor }}<br/>
+            {% empty %}
+                No instructors assigned.
             {% endfor %}
-        </ol>
-    </div>
+                <br/>
+            </p>
+            <div class="edit-course-modal" popover id="editCourseModal {{ course.id }}">
+                <h2>Edit Course info:</h2>
+                <div class="modal-header" id="myModal {{ course.id }}">
+                    <form method="POST" action="{% url 'configure_course' %}">
+                        <div class="modal-dialog">
+                            {% csrf_token %}
+                            <input type="hidden" name="form_name" value="edit_course">
+                            <div>
+                                <label class="form-label required">Course Name</label>
+                                <input type="text" name="name" class="form-control" value="{{ course.name }}">
+                            </div>
+                            <div>
+                                <label class="form-label required">Instructors</label>
+                                <div class="instructor-checkboxes">
+                                    {% for instructor in instructors %}
+                                        <div>
+                                            <input type="checkbox"
+                                                   name="instructor[]"
+                                                   value="{{ instructor.id }}"
+                                                   {% if instructor in course.instructors.all %}checked{% endif %}>
+                                            <label>{{ instructor }}</label>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="button" class="btn btn-secondary"
+                                    popovertarget="editCourseModal {{ course.id }}"
+                                    popovertargetaction="hide">
+                                Cancel
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <button popovertarget="editCourseModal {{ course.id }}">Edit</button>
+        </div>
+    {% endfor %}
+</div>
 </body>
 </html>
