Added a really basic logo, we can always change it.

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
         <a href="course_Directory.html" style="padding: 125px">Course Directory</a>
         <a href="/" style="padding: 125px">Log Out</a>
     </div>
-    <p style="text-align: center">{{ message }}</p>
+    <p style="text-align: center">{{ message }}
+        <img src="/static/Logo.jpeg" alt="logo" width="500" height="500"></img>
 </body>
 </html>
